# durrrrrenv

./: Cargo.toml  LOGO_PLACEHOLDER.md  README.md  hook.zsh
src/: config.rs  executor.rs  main.rs  parser.rs
